--- a/index.html
+++ b/index.html
@@ -20,21 +20,40 @@
         <span class="section__titulo__bajada">A TU MESA</span>
     </section>
     <section class="descripcion">
-      <img src="assets/images/about-1.png" alt="">
+      <img class="img" src="assets/images/about-1.png" alt="racimo de tomates">
       <h3>Tomates 100% orgánicos</h3>
       <p>En Tía tomate estamos comprometidos con tu salud y la de tu familia,
-     de modo que probarás tomates ricos y sin sabor artificial.
-     Para darle vida a nuestros productos usamos materias primas orgánicas y
+        de modo que probarás tomates ricos y sin sabor artificial.</p>
+      <p>Para darle vida a nuestros productos usamos materias primas orgánicas y
      que estén en completo equilibrio con la naturaleza. Así que al comprar
      cualquier tipo de tomate con nosotros te asegurarás de que comeras la mejor
      calidad de tomates limachinos.</p>
     </section>
     <section class="limache">
+      <img class="img" src="assets/images/about-2.png" alt="tomates">
       <h3>Desde Limache con amor</h3>
       <p>Los tomates que están a punto de comprar son nacidos y criados en una de las mejores
      zonas para la producción de tomates de Chile. El proceso que conlleva criar estos Tomates
-     toma al rededor de tres meses con muchos cariños y cuidados.
-     Los tomates toman todos los nutrientes de esta hermosa tierra para que luego tú los disfrutes en cualquier ocasión.</p>
+     toma al rededor de tres meses con muchos cariños y cuidados.</p>
+     <p>Los tomates toman todos los nutrientes de esta hermosa tierra para que luego tú los disfrutes en cualquier ocasión.</p>
     </section>
+    <section class="section">
+      <h2>NOSOTROS</h2>
+    </section>
+    <section class="limache">
+      <img class="img" src="assets/images/about-3.png" alt="Javiera Kunstman">
+      <h3>Javiera Kunstman</h3>
+      <p>Javiera es la orgullosa dueña de Tía tomate. Nacida y criada en Limache se siente tan a gusto aquí como los tomates que cosecha</p>
+      <p>Ella es la encargada administrativa de Tía tomate y estará muy a gusto que la contactes para probar la mejor calidad de tomates de todo limache</p>
+      <p>Javiera y su marido llevan más de 15 años en el rubro ofreciendo la mejor calidad en tomates y desde 2015 comenzaron con la producción de tomates orgánicos limachinos</p>
+      <img class="img" src="assets/images/about-4.png" alt="Roberto Pacheco">
+      <h3>Roberto Pacheco</h3>
+      <p>Roberto es el marido de Javiera. Él es el encargado de darle vida a los tomates, usando su vasta experiencia en la agricultura ha sabido seleccionar las mejores cepas de tomates para su cría y cosecha.</p>
+      </section>
+      <section class="section">
+        <h2>¿Tomates para tu negocio?</h2>
+        <button type="button">CLICK AQUÍ</button>
+      </section>
+
   </body>
 </html>
